# Sementes-do-Amanha-Student-Registration

./: .gitignore  README.md  README.pt-BR.md  teste.docx
backend/: Cargo.toml
backend-python/app/: __init__.py  config.py  documents.py
backend-python/app/models/: __init__.py  attendance.py  students.py  transport.py  users.py
backend-python/app/routes/: __init__.py  attendance.py  documents.py  main.py  students.py  transport.py  users.py
backend-python/app/services/: document_service.py  turma.py
backend-python/instance/: database.db
backend-rust/: .env  Cargo.toml
backend-rust/src/: main.rs
backend-rust/src/config/: mod.rs
backend-rust/src/handlers/: auth.rs  documents.rs  mod.rs  students.rs  users.rs
backend-rust/src/models/: mod.rs  student.rs  user.rs
backend-rust/src/repository/: mod.rs  (+2 more)
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/handlers/: auth.rs  health.rs  mod.rs  students.rs  users.rs
backend/src/models/: mod.rs  student.rs  user.rs
backend/src/repository/: mod.rs  students_repository.rs  user_repository.rs
backend/src/routes/: mod.rs
backend/src/services/: auth_service.rs  students_service.rs  user_service.rs
backend/src/utils/: id.rs
db/: database.sql
docs/: README.md  requisitos.txt
docs/forms/: ficha_de_acolhimento.docx  termo_de_autorizacao_saida_desacompanhada.docx  termo_de_responsabilidade.docx  termo_uso_de_imagem.docx  ~$cha_de_acolhimento.docx
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.js
frontend/src/: App.tsx  main.tsx
(+34 files in other folders)
