[package]
name = "sementes-do-amanha-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
printpdf = { version = "0.7", default-features = false, features = ["embedded_images"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
